--- a/index.html
+++ b/index.html
@@ -172,13 +172,25 @@
                             <div class="portfolio-carousel">
                                 <div class="carousel-container">
                                     <div class="carousel-slide active">
-                                        <img src="assets/images/portfolio1.jpg" alt="E-commerce Platform - Tela 1">
+                                        <img src="assets/images/plataformaE-Comerce/1.png" alt="E-commerce Platform - Tela 1">
                                     </div>
                                     <div class="carousel-slide">
-                                        <img src="assets/images/portfolio1-2.jpg" alt="E-commerce Platform - Tela 2">
+                                        <img src="assets/images/plataformaE-Comerce/2.png" alt="E-commerce Platform - Tela 2">
                                     </div>
                                     <div class="carousel-slide">
-                                        <img src="assets/images/portfolio1-3.jpg" alt="E-commerce Platform - Tela 3">
+                                        <img src="assets/images/plataformaE-Comerce/3.png" alt="E-commerce Platform - Tela 3">
+                                    </div>
+                                    <div class="carousel-slide">
+                                        <img src="assets/images/plataformaE-Comerce/4.png" alt="E-commerce Platform - Tela 4">
+                                    </div>
+                                    <div class="carousel-slide">
+                                        <img src="assets/images/plataformaE-Comerce/5.png" alt="E-commerce Platform - Tela 5">
+                                    </div>
+                                    <div class="carousel-slide">
+                                        <img src="assets/images/plataformaE-Comerce/6.png" alt="E-commerce Platform - Tela 6">
+                                    </div>
+                                    <div class="carousel-slide">
+                                        <img src="assets/images/plataformaE-Comerce/7.png" alt="E-commerce Platform - Tela 7">
                                     </div>
                                 </div>
                                 <button class="carousel-btn prev"><i class="fas fa-chevron-left"></i></button>
@@ -187,6 +199,10 @@
                                     <span class="dot active" data-slide="0"></span>
                                     <span class="dot" data-slide="1"></span>
                                     <span class="dot" data-slide="2"></span>
+                                    <span class="dot" data-slide="3"></span>
+                                    <span class="dot" data-slide="4"></span>
+                                    <span class="dot" data-slide="5"></span>
+                                    <span class="dot" data-slide="6"></span>
                                 </div>
                             </div>
                             <div class="portfolio-overlay">
@@ -239,7 +255,30 @@
                             </div>
                         </div>
                         <div class="portfolio-item" data-category="web">
-                            <img src="assets/images/portfolio3.jpg" alt="Dashboard Admin">
+                            <div class="portfolio-carousel">
+                                <div class="carousel-container">
+                                    <div class="carousel-slide active">
+                                        <img src="assets/images/dashboardAdministrativoB1/1.png" alt="Sistema PDVeEstoque - Tela 1">
+                                    </div>
+                                    <div class="carousel-slide">
+                                        <img src="assets/images/dashboardAdministrativoB1/2.png" alt="Sistema PDVeEstoque - Tela 2">
+                                    </div>
+                                    <div class="carousel-slide">
+                                        <img src="assets/images/dashboardAdministrativoB1/3.png" alt="Sistema PDVeEstoque - Tela 3">
+                                    </div>
+                                    <div class="carousel-slide">
+                                        <img src="assets/images/dashboardAdministrativoB1/4.png" alt="Sistema PDVeEstoque - Tela 4">
+                                    </div>
+                                </div>
+                                <button class="carousel-btn prev"><i class="fas fa-chevron-left"></i></button>
+                                <button class="carousel-btn next"><i class="fas fa-chevron-right"></i></button>
+                                <div class="carousel-dots">
+                                    <span class="dot active" data-slide="0"></span>
+                                    <span class="dot" data-slide="1"></span>
+                                    <span class="dot" data-slide="2"></span>
+                                    <span class="dot" data-slide="3"></span>
+                                </div>
+                            </div>
                             <div class="portfolio-overlay">
                                 <h3>Dashboard Administrativo</h3>
                                 <p>React.js, Tailwind CSS</p>
@@ -322,7 +361,7 @@
                             <div class="portfolio-overlay">
                                 <h3>Site Corporativo B1 Informática</h3>
                                 <p>HTML/CSS, JavaScript</p>
-                                <a href="#" class="portfolio-link"><i class="fas fa-link"></i></a>
+                                <a href="https://b1informatica.netlify.app/" class="portfolio-link"><i class="fas fa-link"></i></a>
                             </div>
                         </div>
                         <div class="portfolio-item" data-category="backend">
